<?xml version="1.0"?>
<package>
  <name>ur5_picknplace</name>
  <version>0.1.0</version>
  <description>UR5 Pick And Place Example</description>
  <license>BSD</license>

  <author email="issaiass@hotmail.com">Rangel Alvarado</author>

  <maintainer email="dave@picknik.ai">Dave Coleman</maintainer>

  <url type="website">https://daqsyspty.com</url>
  <url type="repository">https://github.com/issaiass/ur5_picknplace</url>
  <url type="bugtracker">https://github.com/issaiass/ur5_picknplace/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>panda_moveit_config</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>    
  <run_depend>robotiq_85_picknplace</run_depend>
  <run_depend>ur_description</run_depend>  
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>

</package>
